--- a/src/css/index.css
+++ b/src/css/index.css
@@ -2,7 +2,7 @@
   --primary: #1565c0;
   --dark: #003c8f;
   --light: #5e92f3;
-  --disabled: #e1e1e1;
+  --disabled: #666;
   --gray: #f5f5f5;
   --grey: var(--gray);
 }
@@ -11,16 +11,22 @@ body {
   background-color: var(--gray);
 }
 
-button, [type="button"], [type="reset"], [type="submit"] {
+button,
+[type="button"],
+[type="reset"],
+[type="submit"] {
   -webkit-appearance: none;
 }
+
 .link {
   color: #fff;
 }
+
 .link:hover {
-  color: #c0c0c0;
+  color: var(--dark);
   text-decoration: none;
 }
+
 .bnt {
   border: none;
 }
@@ -29,10 +35,6 @@ button, [type="button"], [type="reset"], [type="submit"] {
   background-color: var(--primary);
   color: #fff;
   padding-top: 15px;
-  text-align: center;
-}
-.footer {
-  margin-top: 20px;
   text-align: center;
 }
 
