--- a/src/css/index.css
+++ b/src/css/index.css
@@ -30,11 +30,12 @@ button,
 .bnt {
   border: none;
 }
-
 .dock {
   background-color: var(--primary);
   color: #fff;
   padding-top: 15px;
+  padding-left: 15px;
+  padding-right: 15px;
   text-align: center;
 }
 
